WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229468
[iOS] Crash when tapping <select> element and calling window.open()
https://bugs.webkit.org/show_bug.cgi?id=229468
Summary
[iOS] Crash when tapping <select> element and calling window.open()
Aditya Keerthi
Reported
2021-08-24 14:20:50 PDT
...
Attachments
Patch
(12.21 KB, patch)
2021-08-24 14:23 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-08-24 14:21:09 PDT
rdar://82122972
Aditya Keerthi
Comment 2
2021-08-24 14:23:11 PDT
Created
attachment 436330
[details]
Patch
Wenson Hsieh
Comment 3
2021-08-24 14:43:15 PDT
Comment on
attachment 436330
[details]
Patch r=mews
EWS
Comment 4
2021-08-25 14:01:08 PDT
Committed
r281579
(
240943@main
): <
https://commits.webkit.org/240943@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436330
[details]
.
Ali Juma
Comment 5
2021-10-01 10:33:20 PDT
Chrome for iOS is getting a significant number of crash reports from this bug on iOS 15.0 and on 15.1 beta. Please consider merging this fix to a release.
Brent Fulgham
Comment 6
2021-10-01 10:43:10 PDT
We believe this will be resolved in an upcoming iOS 15.1 beta.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug